# rats

./: .gitignore  BUILD.sh  CMakeLists.txt  CONTIRBUTION.md  CONTRIBUTION.md  Dockerfile  Doxyfile.in  README.md  RUN.sh  RUN_EXPERIMENTS.sh  build_docker.sh  conda_env.yaml  pyproject.toml  ray_launch.yaml  setup.py  sync_pip_rats.sh  sync_rats_docker.sh
app/: main.cpp
conf/: default.yaml
conf/agent/: dual_ramcp.yaml  dual_uct.yaml  lambda_pareto_uct.yaml  pareto_uct.yaml  primal_uct.yaml  ramcp.yaml  ts.yaml
conf/env/: ccpomcp_ce1.yaml  ccpomcp_ce2.yaml  chp1_hw.yaml  chp2_hw.yaml  chp5_hw.yaml  chp6_hw.yaml  chp6_r_hw.yaml  final_1.yaml  final_10.yaml  final_11.yaml  final_12.yaml  final_13.yaml  final_14.yaml  final_15.yaml  final_16.yaml  final_17.yaml  final_18.yaml  final_19.yaml  final_20.yaml  final_3.yaml  final_4.yaml  final_5.yaml  final_7.yaml  final_8.yaml  final_9.yaml  hw.yaml  investor.yaml  large2_hw.yaml  large_hw.yaml  ramcp_ce.yaml  rng1_hw.yaml  rng2_hw.yaml  rng3_hw.yaml  rng4_hw.yaml  rng5_hw.yaml  slide2_hw.yaml  slide_hw.yaml  small_hw.yaml  traps_hw.yaml
conf/hydra/: default.yaml
conf/task/: run.yaml  train_runs.yaml  write.yaml
cpprats/: CMakeLists.txt
cpprats/include/: agents.hpp  rand.hpp  string_utils.hpp
cpprats/include/agents/tree_search/: ccpomcp.hpp  dual_uct.hpp  lp.hpp  ramcp.hpp  string_utils.hpp  tree_search.hpp  tuct.hpp
cpprats/include/agents/tree_search/pareto_uct/: exact_pareto_uct.hpp  pareto_curves.hpp  tuct.hpp
cpprats/include/agents/tree_search/tuct/: pareto_curves.hpp  tuct.hpp
cpprats/include/envs/: avoid.hpp  ccpomcp_ex1.hpp  ccpomcp_ex2.hpp  continuing_hallway.hpp  env.hpp  frozen_lake.hpp  hallway.hpp  investor_env.hpp  manhattan.hpp  soft_avoid.hpp
cpprats/include/pybind/: LP_example.hpp  agents.hpp  envs.hpp  kernell.pybind.hpp  misc.hpp  pybind.hpp
cpprats/include/pybind/agents/: agent.hpp  ccpomcp.hpp  dual_ramcp.hpp  dual_uct.hpp  lambda_pareto_uct.hpp  lambda_tuct.hpp  pareto_uct.hpp  ramcp.hpp  randomized_agent.hpp  tuct.hpp
cpprats/include/pybind/envs/: avoid.hpp  ccpomcp_ex.hpp  continuing_hallway.hpp  manhattan.hpp  soft_avoid.hpp
cpprats/include/pybind/solvers/: LP_solver.pybind.hpp
cpprats/include/solvers/: LP_solver.hpp
cpprats/pybind/: interface.cpp
cpprats/src/: utils.cpp
cpprats/src/envs/: investor_env.cpp
cpprats/tests/: main.cpp  test_agents.hpp  test_pareto_crves.hpp  test_pareto_curves.hpp  unittest.hpp
dashboard/: analysis.ipynb  app.py
img/manhattan_map_images/: 50thStreet.html
include/: agents.hpp  envs.hpp  kernell.hpp  logging.hpp  ralph.hpp  rand.hpp  string_utils.hpp  tree_logger.hpp  tree_search.hpp  tree_search.ipp  uct.hpp  uct.ipp  utils.hpp  world.hpp
include/agents/: agent.hpp  constant_agent.hpp  dual_uct.hpp  dual_uct.ipp  pareto_uct.hpp  primal_uct.hpp  primal_uct.ipp  ralph.hpp  randomized_agent.hpp  tree_search.hpp  tree_search.ipp  uct.hpp  uct.ipp
include/agents/tree_search/: dual_uct.hpp  dual_uct.ipp  lp.hpp  node.hpp  pareto_uct.hpp  primal_uct.hpp  primal_uct.ipp  ramcp.hpp  string_utils.hpp  tree_search.hpp  tree_search.ipp  uct.hpp  uct.ipp
include/agents/tree_search/pareto_uct/: exact_pareto_uct.hpp  pareto_curves.hpp  pareto_uct.hpp  test.hpp
include/agents/tree_search2/: string_utils.hpp  tree_search.hpp
include/envs/: LP_solver.hpp  ccpomcp_ex1.hpp  ccpomcp_ex2.hpp  env.hpp  frozen_lake.hpp  hallway.hpp  investor_env.hpp  manhattan.hpp
include/pybind/: LP_example.hpp  LP_solver.pybind.hpp  agents.hpp  envs.hpp  pybind.hpp
include/pybind/agents/: agent.hpp  constant_agent.hpp  dual_ramcp.hpp  dual_uct.hpp  lambda_pareto_uct.hpp  pareto_uct.hpp  primal_uct.hpp  ramcp.hpp  randomized_agent.hpp
include/pybind/envs/: ccpomcp_ex.hpp  ccpomcp_ex1.hpp  env.hpp  frozen_lake.hpp  hallway.hpp  investor_env.hpp  manhattan.hpp
include/solvers/: LP_solver.hpp
notebooks/: example.ipynb  manhattan_visualization.ipynb  playground.py  test.py  tree_search.py  visualization.ipynb
notebooks/.ipynb_checkpoints/: visualization-checkpoint.ipynb
pybind/: example_interface.cpp  interface.cpp
pyrats/: agents.py  envs.py  eval.py  eval_lp.py  eval_model.py  eval_models.py  experiment.py  gym_example.ipynb  large_HG_eval.py  lp_eval.py  playground copy.py  playground.py  playground_xkurec.py  playground_xnev.py  playground_xunc.py  process_output.py  raylite  results.csv  tasks.py  tune.py  utils.py  visualization.py  wfc.py
pyrats/gridworld_generator/: GWRB.txt  dataset.py  generator.py  grid.py  utils.py  wfc.py
pyrats/large_HG_eval/results/: results_map_big1_trap:0.6_slide:0.4_thd:0.3.csv  results_map_big1_trap:0.6_slide:0.4_thd:0.csv
pyrats/manhattan/: manhattan.py  notes.txt  reloads_targets.txt
pyrats/ray/: eval_model.py  ray_cluster_test.py  ray_tune_example.py
rats/: __init__.py  agents.py  envs.py  utils.py
rats/manhattan/: AEVEnv.py  manhattan.py  setup.py
rats/manhattan_res/: NYC.graphml
raylite/: __main__.py  commands.py  setup.py
raylite/raylite/: __main__.py  commands.py  utils.py
scripts/: build_docker.sh  build_rats_and_sync.sh  eval.py  eval_large_gw.py  eval_manhattan.py  eval_small_gw.py  large_HG_eval.py  large_hw.py  lp_eval.py  manhattan_eval.py  playground_xkurec.py  playground_xnev.py  playground_xunc.py  small_hw.py  visualization.py  visualize_manhattan.py
scripts/gridworld_generator/: GW_OLD.txt  HW_LARGE.txt  HW_SMALL.txt  dataset.py  generator.py  wfc.py
scripts/manhattan_dataset/: MANHATTAN.txt  dense_dataset.txt  manhattan_dataset.py  manhattan_visualize.py  test_dataset.txt
scripts/manhattan_dataset/map_visualizations/: Harlem.html  Lexington.html  Morningside.html  Pulitzer.html
src/: envs.cpp  logging.cpp  ralph.cpp  rand.cpp  tree_search.cpp  utils.cpp  world.cpp
src/envs/: investor_env.cpp
tests/: CMakeLists.txt  dummy.cpp  main.cpp  test_agents.hpp  test_example.hpp  unittest.hpp
