[build-system]
requires = ["setuptools", "wheel", "pybind11", "cmake_setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rats"
version = "24.6.7"
authors = [
  { name="Martin Kurečka", email="kurecka.m@mail.muni.cz" },
  { name="Václav Nevyhoštěný" },
  { name="Vít Unčovský" }
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]